# dacite

./: .gitignore  build.gradle.kts  mypy.ini  pyproject.toml  settings.gradle.kts  setup.cfg
dacite/: __init__.py  config.py  core.py  dataclasses.py  types.py
tests/: test_dataclasses.py  test_types.py
tests/core/: test_letter_case.py  test_performance.py  test_reserved.py
