[metadata]
name = dacite
; incrementing forked version by 10 and publishing to our pypi server
version = 11.6.0
description = Simple creation of data classes from dictionaries.
license = MIT
author = Konrad Hałas
author_email = halas.konrad@gmail.com
url = https://github.com/konradhalas/dacite
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = ~=3.8
packages = dacite
include_package_data = True
install_requires =

[options.extras_require]
develop =
    pytest
    black
    mypy
    pylint

[options.package_data]
dacite = py.typed

[options.packages.find]
exclude =
    test
    test.*
